--- a/New Site 2023/assets/mobirise/css/mbr-additional.css
+++ b/New Site 2023/assets/mobirise/css/mbr-additional.css
@@ -6630,3 +6630,57 @@ a {
     left: -1rem;
   }
 }
+
+/*----------------------------
+    Disable Text Selection
+----------------------------*/
+.disable {
+  -webkit-touch-callout: none;
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  }
+
+  /*----------------------------
+    Preloader
+----------------------------*/
+.load{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: #000;
+display: grid;
+place-items: center;
+z-index: 99999;
+}
+
+.load__gif{
+width: 320px;
+}
+
+
+::-webkit-scrollbar {
+  width:10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+  border-radius:5px;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.25);
+  }
+  
+  ::-webkit-scrollbar-thumb {
+  border-radius:5px;
+  background-color: #ff7700;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+  background-color: #e36a00;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
