--- a/New Site 2023/assets/mobirise/css/mbr-additional.css
+++ b/New Site 2023/assets/mobirise/css/mbr-additional.css
@@ -6631,6 +6631,91 @@ a {
   }
 }
 
+.cid-truTZQiNCc {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background: #fafafa;
+}
+.cid-truTZQiNCc .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-truTZQiNCc .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-truTZQiNCc .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-truTZQiNCc .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-truTZQiNCc .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-truTZQiNCc .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-truTZQiNCc .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-truTZQiNCc .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-truTZQiNCc .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-truTZQiNCc .social-row {
+  text-align: center;
+}
+.cid-truTZQiNCc .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-truTZQiNCc .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-truTZQiNCc .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-truTZQiNCc .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-truTZQiNCc .mbr-section-title {
+  color: #000000;
+}
+.cid-truTZQiNCc .card-title,
+.cid-truTZQiNCc .social-row {
+  color: #000000;
+}
+.cid-truTZQiNCc .mbr-role,
+.cid-truTZQiNCc .social-row {
+  color: #000000;
+}
+
 /*----------------------------
     Disable Text Selection
 ----------------------------*/
